<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tareo_colab"
            android:icon="@drawable/ic_timer_24px"
            android:title="@string/menu_tareo_trabajador" />
        <item
            android:id="@+id/nav_geomap_montaje"
            android:icon="@drawable/ic_map_24px"
            android:title="@string/menu_geolocalizacion_montaje" />
        <item
            android:id="@+id/nav_actividades_registradas"
            android:icon="@drawable/ic_act_registradas"
            android:title="@string/menu_actividades_registradas" />
        <item
            android:id="@+id/nav_tareo_actividades"
            android:icon="@drawable/ic_act_registradas"
            android:title="@string/menu_tareo_actividades" />
    </group>

    <item android:title="Configuración">
        <menu>

            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_power_settings_new_24px"
                android:title="@string/menu_salir" />
        </menu>
    </item>

</menu>
